--- a/admin.html
+++ b/admin.html
@@ -1,83 +1,118 @@
 <!DOCTYPE html><html lang="bn">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Admin Panel - Crunchyroll BD Shop</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Crunchyroll Admin Panel</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #f4f4f4;
+      background-color: #f4f6f8;
       margin: 0;
       padding: 0;
     }
-    .panel {
-      max-width: 700px;
-      margin: 50px auto;
-      background: white;
-      border-radius: 10px;
-      padding: 30px;
-      box-shadow: 0 0 15px rgba(0,0,0,0.1);
-    }
-    h2 {
-      color: #ff6600;
-      text-align: center;
-    }
-    .stat-box {
-      display: flex;
-      justify-content: space-between;
-      margin: 30px 0;
-    }
-    .stat {
-      flex: 1;
-      background: #ff6600;
+    header {
+      background-color: #ff6600;
       color: white;
+      text-align: center;
       padding: 20px;
-      margin: 10px;
+      font-size: 24px;
+    }
+    .login-box, .dashboard {
+      max-width: 400px;
+      margin: 30px auto;
+      background: white;
+      padding: 30px;
+      border-radius: 10px;
+      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+    }
+    input[type="email"], input[type="password"] {
+      width: 100%;
+      padding: 12px;
+      margin: 10px 0 20px;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+    }
+    button {
+      width: 100%;
+      padding: 12px;
+      background-color: #ff6600;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      cursor: pointer;
+      font-size: 16px;
+    }
+    button:hover {
+      background-color: #e65c00;
+    }
+    .data-box {
+      background: #fff;
+      margin-top: 20px;
+      padding: 20px;
       border-radius: 10px;
       text-align: center;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
     }
-    .footer {
-      text-align: center;
-      color: #999;
-      margin-top: 40px;
+    .data-box h3 {
+      color: #ff6600;
+      font-size: 20px;
+    }
+    .data-box p {
+      font-size: 28px;
+      margin: 10px 0 0;
+      font-weight: bold;
     }
   </style>
 </head>
 <body>
-  <div class="panel">
-    <h2>Crunchyroll BD Shop Admin Panel</h2>
-    <div class="stat-box">
-      <div class="stat">
-        <div id="totalOrders">0</div>
-        <p>মোট অর্ডার</p>
-      </div>
-      <div class="stat">
-        <div id="totalUsers">0</div>
-        <p>মোট ইউজার</p>
-      </div>
+  <header>এডমিন প্যানেল - Crunchyroll Premium BD Shop</header>  <div class="login-box" id="loginBox">
+    <h3>লগইন করুন</h3>
+    <input type="email" id="adminEmail" placeholder="ইমেইল দিন" required />
+    <input type="password" id="adminPass" placeholder="পাসওয়ার্ড দিন" required />
+    <button onclick="loginAdmin()">লগইন</button>
+    <p id="loginError" style="color: red; text-align: center;"></p>
+  </div>  <div class="dashboard" id="adminPanel" style="display: none;">
+    <h2 style="text-align:center">👨‍💼 এডমিন ড্যাশবোর্ড</h2>
+    <div class="data-box">
+      <h3>মোট অর্ডার</h3>
+      <p id="totalOrders">লোড হচ্ছে...</p>
     </div>
-    <div class="footer">আপডেটেড ডেটা দেখার জন্য পেইজটি Reload করুন</div>
+    <div class="data-box">
+      <h3>মোট ইউজার</h3>
+      <p id="totalUsers">লোড হচ্ছে...</p>
+    </div>
   </div>  <script>
-    const sheetUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSszsZGoe0lXBXOWGktlJ6pYIU6YSIM_SZgLKnsifoa9jAN_jit55vIcOOdXi8yILI5-9i8P-hfIrsv/pub?output=csv";
+    const adminEmail = "anime43377@gmail.com";
+    const adminPassword = "Jisan1234@@@";
 
-    fetch(sheetUrl)
-      .then(response => response.text())
-      .then(data => {
-        const rows = data.trim().split('\n');
-        const totalOrders = rows.length - 1; // exclude header
-        const uniqueUsers = new Set();
+    function loginAdmin() {
+      const email = document.getElementById("adminEmail").value;
+      const pass = document.getElementById("adminPass").value;
+      if (email === adminEmail && pass === adminPassword) {
+        document.getElementById("loginBox").style.display = "none";
+        document.getElementById("adminPanel").style.display = "block";
+        loadData();
+      } else {
+        document.getElementById("loginError").innerText = "❌ ভুল ইমেইল অথবা পাসওয়ার্ড!";
+      }
+    }
 
-        for (let i = 1; i < rows.length; i++) {
-          const columns = rows[i].split(',');
-          const email = columns[1]; // Assuming column 1 is Email
-          uniqueUsers.add(email);
-        }
+    async function loadData() {
+      const csvUrl = "https://docs.google.com/spreadsheets/d/e/2PACX-1vSszsZGoe0lXBXOWGktlJ6pYIU6YSIM_SZgLKnsifoa9jAN_jit55vIcOOdXi8yILI5-9i8P-hfIrsv/pub?gid=0&single=true&output=csv";
+      try {
+        const response = await fetch(csvUrl);
+        const csvText = await response.text();
+        const rows = csvText.trim().split("\n");
+        const totalOrders = rows.length - 1;
+        const totalUsers = new Set(rows.slice(1).map(row => row.split(",")[1])).size;
 
-        document.getElementById('totalOrders').innerText = totalOrders;
-        document.getElementById('totalUsers').innerText = uniqueUsers.size;
-      })
-      .catch(error => {
-        console.error('Error fetching data:', error);
-      });
+        document.getElementById("totalOrders").innerText = totalOrders + " টি";
+        document.getElementById("totalUsers").innerText = totalUsers + " জন";
+      } catch (error) {
+        document.getElementById("totalOrders").innerText = "লোড হয়নি";
+        document.getElementById("totalUsers").innerText = "লোড হয়নি";
+        console.error("Data Load Error:", error);
+      }
+    }
   </script></body>
 </html>
