--- a/index.html
+++ b/index.html
@@ -1,52 +1,34 @@
-<!DOCTYPE html>
-<html lang="bn">
+<!DOCTYPE html><html lang="bn">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Crunchyroll Premium BD Shop</title>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
       background-color: #fdfcfb;
-      margin: 0;
-      padding: 0;
+      padding: 30px;
     }
-    header {
-      background-color: #ff6600;
-      color: white;
-      text-align: center;
-      padding: 20px 0;
-      font-size: 28px;
-    }
-    .container {
-      max-width: 700px;
-      margin: 30px auto;
+    form {
+      max-width: 600px;
+      margin: auto;
+      padding: 20px;
       background: #fff;
-      padding: 25px;
       border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
-    h3 {
-      color: #ff6600;
-    }
-    label {
-      font-weight: bold;
-    }
-    input, select {
+    input, select, button {
       width: 100%;
-      padding: 10px;
-      margin: 10px 0 20px;
-      border: 1px solid #ccc;
+      margin-bottom: 15px;
+      padding: 12px;
       border-radius: 8px;
+      border: 1px solid #ccc;
+      font-size: 16px;
     }
     button {
       background-color: #ff6600;
       color: white;
-      padding: 12px;
       border: none;
-      border-radius: 8px;
-      font-size: 16px;
-      width: 100%;
       cursor: pointer;
     }
     button:hover {
@@ -55,90 +37,36 @@
   </style>
 </head>
 <body>
-  <header>Crunchyroll Premium BD Shop</header>
-  <div class="container">
-    <form id="orderForm">
-      <h3>📟 বিলিং এড্রেস</h3>
-      <label>Full Name *</label>
-      <input type="text" name="name" required>
-      <label>Email *</label>
-      <input type="email" name="email" required>
-      <label>Street Address *</label>
-      <input type="text" name="address" required>
-      <label>Mobile Number *</label>
-      <input type="text" name="mobile" required>
+  <form id="orderForm">
+    <h2 style="text-align:center; color: #ff6600;">Crunchyroll Premium BD Shop</h2><input type="text" name="name" placeholder="আপনার নাম" required />
+<input type="email" name="email" placeholder="ইমেইল" required />
+<input type="text" name="mobile" placeholder="মোবাইল নাম্বার" required />
+<input type="text" name="payment_number" placeholder="পেমেন্ট নাম্বার" required />
+<input type="text" name="trans_id" placeholder="ট্রানজেকশন আইডি" required />
 
-      <h3>📦 প্যাকেজ সিলেকশন</h3>
-      <label>Crunchyroll Share Account ⚡</label>
-      <select name="package">
-        <option value="1 Month Share – 100 TK">1 Month – 100 TK</option>
-        <option value="2 Months Share – 200 TK">2 Months – 200 TK</option>
-        <option value="3 Months Share – 300 TK">3 Months – 300 TK</option>
-        <option value="6 Months Share – 600 TK">6 Months – 600 TK</option>
-        <option value="8 Months Share – 840 TK">8 Months – 840 TK</option>
-      </select>
+<select name="payment_method" required>
+  <option value="">--পেমেন্ট মাধ্যম নির্বাচন করুন--</option>
+  <option value="Bkash">Bkash</option>
+  <option value="Nagad">Nagad</option>
+  <option value="Rocket">Rocket</option>
+</select>
 
-      <label>Crunchyroll Personal Profile ⚡</label>
-      <select name="personal_package">
-        <option value="1 Month Personal – 240 TK">1 Month – 240 TK</option>
-        <option value="2 Months Personal – 480 TK">2 Months – 480 TK</option>
-        <option value="3 Months Personal – 720 TK">3 Months – 720 TK</option>
-        <option value="6 Months Personal – 1440 TK">6 Months – 1440 TK</option>
-        <option value="8 Months Personal – 1800 TK">8 Months – 1800 TK</option>
-        <option value="12 Months Personal – 2760 TK">12 Months – 2760 TK</option>
-      </select>
+<button type="submit">✅ অর্ডার কনফার্ম করুন</button>
 
-      <label>Crunchyroll Primary Account ⚡</label>
-      <select name="primary_package">
-        <option value="1 Month Primary – 650 TK">1 Month – 650 TK</option>
-        <option value="2 Months Primary – 1300 TK">2 Months – 1300 TK</option>
-        <option value="3 Months Primary – 1950 TK">3 Months – 1950 TK</option>
-        <option value="6 Months Primary – 3600 TK">6 Months – 3600 TK</option>
-      </select>
-
-      <h3>💳 পেমেন্ট তথ্য</h3>
-      <label>Payment Number *</label>
-      <input type="text" name="payment_number" required>
-      <label>Transaction ID *</label>
-      <input type="text" name="trans_id" required>
-      <label>Payment Method *</label>
-      <select name="payment_method" required>
-        <option value="Bkash">Bkash</option>
-        <option value="Nagad">Nagad</option>
-        <option value="Rocket">Rocket</option>
-      </select>
-
-      <button type="submit">✅ অর্ডার কনফার্ম করুন</button>
-    </form>
-  </div>
-
-  <!-- EmailJS -->
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
-  <script>
-    (function() {
+  </form>  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>  <script>
+    (function () {
       emailjs.init("SsUmUorUm-BZG8LBY");
     })();
 
-    document.getElementById("orderForm").addEventListener("submit", function(e) {
+    const form = document.getElementById("orderForm");
+
+    form.addEventListener("submit", function (e) {
       e.preventDefault();
-      const form = this;
 
       // EmailJS Send
-      emailjs.sendForm("service_z1714kq", "template_hp66tqp", form)
-        .then(function() {
-          alert("✅ অর্ডার সফলভাবে পাঠানো হয়েছে! আপনি শীঘ্রই ইমেইল পাবেন।");
-          form.reset();
-        }, function(error) {
-          alert("❌ অর্ডার পাঠানো ব্যর্থ হয়েছে!");
-          console.error(error);
-        });
-
-      // Google Sheet Send
-      fetch("https://script.google.com/macros/s/AKfycbwViESdE2QtiNDB5jUVfPfzKv3eueKY_JXix88h9qY8o7Y2E9O7Gmml2waHOfEzjvSC7Q/exec", {
-        method: "POST",
-        body: new FormData(form)
-      }).then(response => console.log('Sheet Updated')).catch(err => console.log(err));
-    });
-  </script>
-</body>
-</html>
+      emailjs.sendForm("service_z1714kq", "template_hp66tqp", this).then(
+        function () {
+          alert("✅ অর্ডার সফলভাবে ইমেইলে পাঠানো হয়েছে! আপনি শীঘ্রই একটি পেন্ডিং মেইল পাবেন।");
+        },
+        function (error) {
+          alert("❌ ইমেইল পাঠাতে ব্যর্থ! আবার চেষ্টা
