--- a/index.html
+++ b/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html lang="bn">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Crunchyroll Premium BD Shop</title>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-firestore-compat.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
@@ -29,10 +26,8 @@
       border-radius: 10px;
       box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
     }
-    label, h3 {
-      color: #ff6600;
-      font-weight: bold;
-    }
+    h3 { color: #ff6600; }
+    label { font-weight: bold; }
     input, select {
       width: 100%;
       padding: 10px;
@@ -53,6 +48,11 @@
     button:hover {
       background-color: #e65c00;
     }
+    .message {
+      text-align: center;
+      margin-top: 15px;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
@@ -61,33 +61,41 @@
     <form id="orderForm">
       <h3>🧾 বিলিং এড্রেস</h3>
       <label>Full Name *</label>
-      <input type="text" name="name" required>
-
+      <input type="text" name="name" required />
       <label>Email *</label>
-      <input type="email" name="email" required>
-
+      <input type="email" name="email" required />
       <label>Street Address *</label>
-      <input type="text" name="address" required>
-
+      <input type="text" name="address" required />
       <label>Mobile Number *</label>
-      <input type="text" name="mobile" required>
+      <input type="text" name="mobile" required />
 
       <h3>📦 প্যাকেজ সিলেকশন</h3>
       <label>Crunchyroll Share Account ⚡</label>
       <select name="package">
-        <option value="1 Month Share – 100 TK">1 Month – 100 TK</option>
-        <option value="2 Months Share – 200 TK">2 Months – 200 TK</option>
-        <option value="3 Months Share – 300 TK">3 Months – 300 TK</option>
-        <option value="6 Months Share – 600 TK">6 Months – 600 TK</option>
-        <option value="8 Months Share – 840 TK">8 Months – 840 TK</option>
+        <option value="1 Month – 100 TK">1 Month – 100 TK</option>
+        <option value="2 Months – 200 TK">2 Months – 200 TK</option>
+        <option value="3 Months – 300 TK">3 Months – 300 TK</option>
       </select>
 
+      <label>Crunchyroll Personal Profile ⚡</label>
+      <select name="personal_package">
+        <option value="1 Month – 240 TK">1 Month – 240 TK</option>
+        <option value="2 Months – 480 TK">2 Months – 480 TK</option>
+        <option value="3 Months – 720 TK">3 Months – 720 TK</option>
+      </select>
+
+      <label>Crunchyroll Primary Account ⚡</label>
+      <select name="primary_package">
+        <option value="1 Month – 650 TK">1 Month – 650 TK</option>
+        <option value="2 Months – 1300 TK">2 Months – 1300 TK</option>
+        <option value="3 Months – 1950 TK">3 Months – 1950 TK</option>
+      </select>
+
+      <h3>💳 পেমেন্ট তথ্য</h3>
       <label>Payment Number *</label>
-      <input type="text" name="payment_number" required>
-
+      <input type="text" name="payment_number" required />
       <label>Transaction ID *</label>
-      <input type="text" name="trans_id" required>
-
+      <input type="text" name="trans_id" required />
       <label>Payment Method *</label>
       <select name="payment_method" required>
         <option value="Bkash">Bkash</option>
@@ -97,11 +105,16 @@
 
       <button type="submit">✅ অর্ডার কনফার্ম করুন</button>
     </form>
+    <div class="message" id="formMessage"></div>
   </div>
 
-  <script>
-    emailjs.init("SsUmUorUm-BZG8LBY");
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <script type="module">
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
+    import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js";
 
+    // Firebase config
     const firebaseConfig = {
       apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4",
       authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com",
@@ -112,45 +125,44 @@
       measurementId: "G-PSSPTLC6MJ"
     };
 
-    firebase.initializeApp(firebaseConfig);
-    const db = firebase.firestore();
+    const app = initializeApp(firebaseConfig);
+    const db = getFirestore(app);
 
-    document.getElementById("orderForm").addEventListener("submit", function(e) {
+    emailjs.init("SsUmUorUm-BZG8LBY");
+
+    const form = document.getElementById("orderForm");
+    const message = document.getElementById("formMessage");
+
+    form.addEventListener("submit", async (e) => {
       e.preventDefault();
 
-      const form = this;
-      const formData = new FormData(form);
-      const orderData = {};
-      formData.forEach((value, key) => {
-        orderData[key] = value;
-      });
+      try {
+        // Send Email
+        await emailjs.sendForm("service_z1714kq", "template_hp66tqp", form);
 
-      // Save to Firebase
-      db.collection("orders").add(orderData)
-        .then(() => {
-          // Send Email to Admin
-          emailjs.sendForm("service_z1714kq", "template_hp66tqp", form)
-            .then(() => {
-              // Send Email to Customer
-              emailjs.send("service_z1714kq", "template_1z1lhlf", orderData)
-                .then(() => {
-                  alert("✅ অর্ডার সফলভাবে সাবমিট হয়েছে। আপনি ইমেইলে কনফার্মেশন পাবেন।");
-                  form.reset();
-                })
-                .catch(error => {
-                  alert("❌ কাস্টমার মেইল ব্যর্থ হয়েছে!");
-                  console.error(error);
-                });
-            })
-            .catch(error => {
-              alert("❌ অ্যাডমিন মেইল ব্যর্থ হয়েছে!");
-              console.error(error);
-            });
-        })
-        .catch(error => {
-          alert("❌ ফায়ারবেজে অর্ডার সাবমিট হয়নি!");
-          console.error(error);
+        // Save to Firebase
+        await addDoc(collection(db, "orders"), {
+          name: form.name.value,
+          email: form.email.value,
+          address: form.address.value,
+          mobile: form.mobile.value,
+          package: form.package.value,
+          personal_package: form.personal_package.value,
+          primary_package: form.primary_package.value,
+          payment_number: form.payment_number.value,
+          trans_id: form.trans_id.value,
+          payment_method: form.payment_method.value,
+          timestamp: new Date()
         });
+
+        message.style.color = "green";
+        message.textContent = "✅ অর্ডার সফলভাবে পাঠানো হয়েছে! আপনি শীঘ্রই ইমেইল পাবেন।";
+        form.reset();
+      } catch (error) {
+        console.error("Error:", error);
+        message.style.color = "red";
+        message.textContent = "❌ অর্ডার ব্যর্থ হয়েছে! আবার চেষ্টা করুন।";
+      }
     });
   </script>
 </body>
