--- a/index.html
+++ b/index.html
@@ -1,167 +1,107 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="bn">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Crunchyroll Premium BD Shop</title>
+  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
+  <script type="module" src="firebase-config.js"></script>
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-color: #fdfcfb;
+      background-color: #f9f9f9;
       margin: 0;
       padding: 0;
     }
-    header {
-      background-color: #ff6600;
-      color: white;
-      text-align: center;
-      padding: 20px 0;
-      font-size: 28px;
-    }
     .container {
       max-width: 700px;
-      margin: 30px auto;
+      margin: 40px auto;
+      padding: 20px;
       background: #fff;
-      padding: 25px;
       border-radius: 10px;
-      box-shadow: 0 0 15px rgba(0, 0, 0, 0.1);
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
     }
-    h3 { color: #ff6600; }
-    label { font-weight: bold; }
+    h2 { color: #ff6600; }
     input, select {
       width: 100%;
       padding: 10px;
-      margin: 10px 0 20px;
+      margin-bottom: 15px;
+      border-radius: 6px;
       border: 1px solid #ccc;
-      border-radius: 8px;
     }
     button {
       background-color: #ff6600;
       color: white;
-      padding: 12px;
       border: none;
-      border-radius: 8px;
+      padding: 12px;
+      border-radius: 6px;
       font-size: 16px;
-      width: 100%;
       cursor: pointer;
     }
-    button:hover {
-      background-color: #e65c00;
-    }
-    .message {
-      text-align: center;
-      margin-top: 15px;
-      font-weight: bold;
-    }
+    button:hover { background-color: #e65c00; }
   </style>
 </head>
 <body>
-  <header>Crunchyroll Premium BD Shop</header>
   <div class="container">
+    <h2>📦 Crunchyroll Premium BD Shop - অর্ডার ফর্ম</h2>
     <form id="orderForm">
-      <h3>🧾 বিলিং এড্রেস</h3>
-      <label>Full Name *</label>
-      <input type="text" name="name" required />
-      <label>Email *</label>
-      <input type="email" name="email" required />
-      <label>Street Address *</label>
-      <input type="text" name="address" required />
-      <label>Mobile Number *</label>
-      <input type="text" name="mobile" required />
-
-      <h3>📦 প্যাকেজ সিলেকশন</h3>
-      <label>Crunchyroll Share Account ⚡</label>
-      <select name="package">
-        <option value="1 Month – 100 TK">1 Month – 100 TK</option>
-        <option value="2 Months – 200 TK">2 Months – 200 TK</option>
-        <option value="3 Months – 300 TK">3 Months – 300 TK</option>
+      <input name="name" placeholder="আপনার নাম *" required />
+      <input name="email" type="email" placeholder="ইমেইল *" required />
+      <input name="mobile" placeholder="মোবাইল নম্বর *" required />
+      <select name="package" required>
+        <option value="">প্যাকেজ নির্বাচন করুন</option>
+        <option value="1 Month Share – 100 TK">1 Month Share – 100 TK</option>
+        <option value="1 Month Personal – 240 TK">1 Month Personal – 240 TK</option>
+        <option value="1 Month Primary – 650 TK">1 Month Primary – 650 TK</option>
       </select>
-
-      <label>Crunchyroll Personal Profile ⚡</label>
-      <select name="personal_package">
-        <option value="1 Month – 240 TK">1 Month – 240 TK</option>
-        <option value="2 Months – 480 TK">2 Months – 480 TK</option>
-        <option value="3 Months – 720 TK">3 Months – 720 TK</option>
-      </select>
-
-      <label>Crunchyroll Primary Account ⚡</label>
-      <select name="primary_package">
-        <option value="1 Month – 650 TK">1 Month – 650 TK</option>
-        <option value="2 Months – 1300 TK">2 Months – 1300 TK</option>
-        <option value="3 Months – 1950 TK">3 Months – 1950 TK</option>
-      </select>
-
-      <h3>💳 পেমেন্ট তথ্য</h3>
-      <label>Payment Number *</label>
-      <input type="text" name="payment_number" required />
-      <label>Transaction ID *</label>
-      <input type="text" name="trans_id" required />
-      <label>Payment Method *</label>
+      <input name="payment_number" placeholder="পেমেন্ট নম্বর *" required />
+      <input name="trans_id" placeholder="ট্রানজেকশন নম্বর *" required />
       <select name="payment_method" required>
+        <option value="">পেমেন্ট মেথড নির্বাচন করুন</option>
         <option value="Bkash">Bkash</option>
         <option value="Nagad">Nagad</option>
         <option value="Rocket">Rocket</option>
       </select>
-
       <button type="submit">✅ অর্ডার কনফার্ম করুন</button>
     </form>
-    <div class="message" id="formMessage"></div>
   </div>
 
-  <!-- Scripts -->
-  <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
   <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js";
-    import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js";
-
-    // Firebase config
-    const firebaseConfig = {
-      apiKey: "AIzaSyDDvKtm-Mu_12pDLo_9bPvLOusx6YyoYI4",
-      authDomain: "crunchyrollpremiumbd-shop.firebaseapp.com",
-      projectId: "crunchyrollpremiumbd-shop",
-      storageBucket: "crunchyrollpremiumbd-shop.appspot.com",
-      messagingSenderId: "790961397898",
-      appId: "1:790961397898:web:1c5fceb8b5d3340c3bcd73",
-      measurementId: "G-PSSPTLC6MJ"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const db = getFirestore(app);
+    import { db, collection, addDoc } from './firebase-config.js';
 
     emailjs.init("SsUmUorUm-BZG8LBY");
 
-    const form = document.getElementById("orderForm");
-    const message = document.getElementById("formMessage");
-
-    form.addEventListener("submit", async (e) => {
+    document.getElementById("orderForm").addEventListener("submit", async function(e) {
       e.preventDefault();
 
-      try {
-        // Send Email
-        await emailjs.sendForm("service_z1714kq", "template_hp66tqp", form);
+      const form = this;
+      const data = Object.fromEntries(new FormData(form).entries());
 
-        // Save to Firebase
+      try {
+        // EmailJS to Admin
+        await emailjs.send("service_z1714kq", "template_hp66tqp", data);
+
+        // EmailJS to Customer
+        await emailjs.send("service_z1714kq", "template_1z1lhlf", data);
+
+        // Firebase Store
         await addDoc(collection(db, "orders"), {
-          name: form.name.value,
-          email: form.email.value,
-          address: form.address.value,
-          mobile: form.mobile.value,
-          package: form.package.value,
-          personal_package: form.personal_package.value,
-          primary_package: form.primary_package.value,
-          payment_number: form.payment_number.value,
-          trans_id: form.trans_id.value,
-          payment_method: form.payment_method.value,
-          timestamp: new Date()
+          name: data.name,
+          email: data.email,
+          mobile: data.mobile,
+          package: data.package,
+          payment_number: data.payment_number,
+          trans_id: data.trans_id,
+          payment_method: data.payment_method,
+          createdAt: new Date()
         });
 
-        message.style.color = "green";
-        message.textContent = "✅ অর্ডার সফলভাবে পাঠানো হয়েছে! আপনি শীঘ্রই ইমেইল পাবেন।";
+        alert("✅ অর্ডার সফলভাবে পাঠানো হয়েছে! আপনি শীঘ্রই ইমেইল পাবেন।");
         form.reset();
       } catch (error) {
         console.error("Error:", error);
-        message.style.color = "red";
-        message.textContent = "❌ অর্ডার ব্যর্থ হয়েছে! আবার চেষ্টা করুন।";
+        alert("❌ অর্ডার পাঠানো ব্যর্থ হয়েছে! দয়া করে আবার চেষ্টা করুন।");
       }
     });
   </script>
